Add one map as primary map

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
 <head>
   <title>I absolutely love modern JavaScript[i]![/i]</title>
   <meta charset="utf-8">
+
+  <link href="./node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css" rel="stylesheet" />
+  <link href="./node_modules/@blueprintjs/core/lib/css/blueprint.css" rel="stylesheet" />
+  <!-- CDNJS, production (minified) -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.min.js"></script> -->
+  <link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css' rel='stylesheet'>
 </head>
 
 <body>
