--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>I absolutely love modern JavaScript[i]![/i]</title>
+  <title>SG Transport stats</title>
   <meta charset="utf-8">
 
   <link href="./node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css" rel="stylesheet" />
@@ -14,8 +14,16 @@
 
 <body>
   <div id="root">
-    <div>Loading&hellip;</div>
-    <div>Style me in index.html!</div>
+    <div class="bp3-dark bp3-card bp3-elevation-0">
+      <div class="bp3-spinner">
+        <div class="bp3-spinner-animation">
+          <svg width="200" height="200" stroke-width="2.00" viewBox="4.00 4.00 92.00 92.00">
+            <path class="bp3-spinner-track" d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"></path>
+            <path class="bp3-spinner-head" d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90" pathLength="280"
+              stroke-dasharray="280 280" stroke-dashoffset="210"></path>
+          </svg></div>
+      </div>
+    </div>
   </div>
 </body>
 
