Use bluepring cdn

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>SG Transport stats</title>
   <meta charset="utf-8">
 
-  <link href="./node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css" rel="stylesheet" />
-  <link href="./node_modules/@blueprintjs/core/lib/css/blueprint.css" rel="stylesheet" />
+  <link href="https://unpkg.com/@blueprintjs/core@^3.0.0/lib/css/blueprint.css" rel="stylesheet" />
+  <link href="https://unpkg.com/@blueprintjs/icons@^3.0.0/lib/css/blueprint-icons.css" rel="stylesheet" />
   <!-- CDNJS, production (minified) -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.min.js"></script> -->
   <link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css' rel='stylesheet'>
