Pipeline: Test updating image

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>SG Transport stats</title>
+  <title>SG Transport Stats</title>
   <meta charset="utf-8">
 
   <link href="https://unpkg.com/@blueprintjs/core@^3.0.0/lib/css/blueprint.css" rel="stylesheet" />
